❌Rimozione logica del cibo, available field
