# server/src/controllers/food.controller.ts
@@ -9,6 +9,15 @@ export const getFoods = async (req: Request, res: Response): Promise<void> => {
     res.status(200).json(foods);
 }
 
+export const getAvailableFoods = async (req: Request, res: Response): Promise<void> => {
+    const foods = await prisma.food.findMany({
+        where: {
+            available: true
+        }
+    });
+    res.status(200).json(foods);
+}
+
 export const getFoodById = async (req: Request, res: Response): Promise<void> => {
     const id = parseInt(req.params.id);
 
@@ -43,8 +52,26 @@ export const getFoodByCategory = async (req: Request, res: Response): Promise<vo
     res.status(200).json(food);
 }
 
+export const getAvailableFoodByCategory = async (req: Request, res: Response): Promise<void> => {
+    const id = parseInt(req.params.id);
+
+    const food = await prisma.food.findMany({
+        where: {
+            categoryId: id,
+            available: true
+        }
+    });
+
+    if (!food) {
+        res.status(404).json({ message: "Food not found" });
+        return;
+    }
+
+    res.status(200).json(food);
+}
+
 export const createFood = async (req: Request, res: Response): Promise<void> => {
-    const food : Food = req.body;
+    const food: Food = req.body;
 
     try {
         const newFood = await prisma.food.create({
@@ -61,7 +88,7 @@ export const createFood = async (req: Request, res: Response): Promise<void> => 
 
 export const updateFood = async (req: Request, res: Response): Promise<void> => {
     const id = parseInt(req.params.id);
-    const food : Food = req.body;
+    const food: Food = req.body;
 
     try {
         const updatedFood = await prisma.food.update({
@@ -77,6 +104,33 @@ export const updateFood = async (req: Request, res: Response): Promise<void> => 
         }
 
         res.status(200).json(updatedFood);
+    }
+    catch (err) {
+        res.status(500).json({ message: "Internal Server Error" });
+    }
+}
+
+export const patchFoodAvailable = async (req: Request, res: Response): Promise<void> => {
+    const id = parseInt(req.params.id);
+
+    const food = await prisma.food.findUnique({ where: { id }})
+
+    if (!food) {
+        res.status(404).json({ message: "Food not found" });
+        return;
+    }
+
+    try {
+        const patchFood = await prisma.food.update({
+            where: {
+                id
+            },
+            data: {
+                available: !food.available
+            }
+        });
+
+        res.status(200).json(patchFood);
     }
     catch (err) {
         res.status(500).json({ message: "Internal Server Error" });
