# webapp/src/app/api/foods/availables/categories/[category]/route.ts
@@ -1,0 +1,17 @@
+import { NextResponse, NextRequest } from 'next/server';
+
+interface Params {
+    category: string;
+}
+
+const API_URL = process.env.API_URL;
+
+export async function GET(
+    request: NextRequest,
+    { params }: { params: Promise<Params> } // params è il secondo argomento
+) {
+    const { category } = await params;
+    const res = await fetch(`${API_URL}/foods/availables/categories/${category}`);
+    const data = await res.json();
+    return NextResponse.json(data);
+}
